# stm32builder

./: .rustfmt.toml  Cargo.toml  Makefile  README.md
src/: device.rs  device_info.rs  gpio.rs  gpio_bank.rs  gpio_pin.rs  lib.rs  main.rs  peripheral_bus.rs  peripherals.rs  rcc.rs  tests.rs
src/api/: convertible.rs  error.rs  mod.rs  peripheral_on_bus.rs  render.rs  validatable.rs
src/helpers/: handlebars.rs  mod.rs  serde.rs
src/types/: bus.rs  device_id.rs  flash_size.rs  mod.rs  others.rs  package.rs  temperature_range.rs  valid.rs
tests/: Cargo-toml  Cargo.toml  main.rs  output.tmp  stm32f051.yaml  template.tmp
tests/expected/: decode_stm32f051R8T6_stdout.txt  help_stdout.txt  parse_stm32f051.yaml_stdout.txt  print_stm32f051K8T6_stm32f051.yaml_gpio_stdout.txt  print_stm32f051R8T6_stm32f051.yaml_device_stdout.txt  print_stm32f051R8T6_stm32f051.yaml_gpio_stdout.txt  print_stm32f051R8T6_stm32f051.yaml_info_stdout.txt  print_stm32f051R8T6_stm32f051.yaml_rcc_stdout.txt  print_stm32f051R8T6_stm32f051.yaml_stdout.txt  show_stm32f051R8T6_stm32f051.yaml_device_stdout.txt  show_stm32f051R8T6_stm32f051.yaml_gpio_stdout.txt  show_stm32f051R8T6_stm32f051.yaml_info_stdout.txt  show_stm32f051R8T6_stm32f051.yaml_rcc_stdout.txt  show_stm32f051R8T6_stm32f051.yaml_stdout.txt  update-cargo_Cargo-toml_stm32f051.yaml_stdout.txt  update-cargo_Cargo.toml_stm32f051.yaml_stdout.txt
