[package]
name = "stm32builder"
description = "A tool to build stm32 HAL"
version = "0.0.9"
authors = ["OCTronics <octronics@riseup.net>"]
edition = "2018"
keywords = ["stm32", "embedded"]
categories = ["embedded"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
handlebars = { version = "1.1", optional = true }

[features]
default = [ "render" ]
render = [ "handlebars" ]
